# shopify-gql-cli

./: LICENSE  README.md  pyproject.toml
src/shopify_gql_cli/: __init__.py  __main__.py  cli.py
src/shopify_gql_cli/core/: client.py  customers.py  graphql.py  inventory.py  orders.py  products.py  shop.py
src/shopify_gql_cli/tests/: test_core.py  test_full_e2e.py
src/shopify_gql_cli/utils/: repl_skin.py  shopify_backend.py
